# ChangeLog for media-video/nvidia-glx
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/nvidia-glx/ChangeLog,v 1.70 2005/01/17 08:47:43 cyfred Exp $

  17 Jan 2005; Andrew Bevitt <cyfred@gentoo.org>
  nvidia-glx-1.0.6629-r1.ebuild, -nvidia-glx-1.0.6629.ebuild:
  Marking 6629 stable across archs

  10 Jan 2005; Jason Huebel <jhuebel@gentoo.org>
  nvidia-glx-1.0.6629-r1.ebuild:
  stable on amd64

*nvidia-glx-1.0.6629-r1 (31 Dec 2004)

  31 Dec 2004; Andrew Bevitt <cyfred@gentoo.org>
  +nvidia-glx-1.0.6629-r1.ebuild:
  Changing driver and lib install location to be detected depending on
  xorg-x11 version.

  30 Nov 2004; Andrew Bevitt <cyfred@gentoo.org> -files/README.gentoo,
  +files/libGL.la, -files/libGL.la.2,
  -files/nvidia-glx-1.0.4363-defines.patch,
  -files/nvidia-glx-1.0.4496-defines.patch,
  -files/nvidia-glx-1.0.4499-defines.patch,
  -files/nvidia-glx-1.0.5328-defines.patch,
  -files/nvidia-glx-1.0.5328-glheader.patch,
  -files/nvidia-glx-1.0.5332-glheader.patch,
  -files/nvidia-glx-1.0.5336-glheader.patch,
  -files/1.0.6106/NVIDIA_glx-1.0.6106-defines.patch,
  -files/1.0.6106/NVIDIA_glx-1.0.6106-glheader.patch,
  -files/1.0.6106/NVIDIA_glx-1.0.6106-makefile.patch,
  -nvidia-glx-1.0.4363-r1.ebuild, -nvidia-glx-1.0.4496-r2.ebuild,
  -nvidia-glx-1.0.4499-r1.ebuild, -nvidia-glx-1.0.5328-r2.ebuild,
  -nvidia-glx-1.0.5332-r2.ebuild, -nvidia-glx-1.0.5336-r2.ebuild,
  -nvidia-glx-1.0.6106-r3.ebuild, nvidia-glx-1.0.6111.ebuild,
  nvidia-glx-1.0.6629.ebuild:
  Removing all masked (deprecated) versions to match the nvidia-kernel removal.

  10 Nov 2004; Andrew Bevitt <cyfred@gentoo.org>
  +files/1.0.6629/NVIDIA_glx-1.0.6629-defines.patch,
  +files/1.0.6629/NVIDIA_glx-1.0.6629-glheader.patch,
  +files/1.0.6629/NVIDIA_glx-1.0.6629-makefile.patch,
  nvidia-glx-1.0.6629.ebuild:
  Porting across GL patches for consistency, it was necessary in the end.
