@@ -1,14 +1,26 @@
-MD5 054d157a64eb2fd753871a076ba5a580 ChangeLog 15006
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 6fab16d2698ebd9d2c97b6b6825d8e91 ChangeLog 15245
 MD5 a877edb407b63894d17386ea0aaca151 metadata.xml 286
-MD5 f04cfe31611830254b47f3ba5e63689d nvidia-glx-1.0.6111.ebuild 5347
 MD5 0b5c0e9847ecde734dbf9e5b38185be2 nvidia-glx-1.0.6629-r1.ebuild 5656
+MD5 f04cfe31611830254b47f3ba5e63689d nvidia-glx-1.0.6111.ebuild 5347
+MD5 a40178315735e642592ec2bf1f562412 nvidia-glx-1.0.6629-r2.ebuild 6368
 MD5 c3afc69f917a783ebd53cf2de38065dc files/09nvidia 61
 MD5 49e1d59847fbcc32cb582d9df7e1c1b3 files/libGL.la 751
-MD5 ed1e098d85579c75542ef0a49ee4dd5c files/digest-nvidia-glx-1.0.6111 163
 MD5 8a4687b0fc3e7cc0b36c247697d94701 files/digest-nvidia-glx-1.0.6629-r1 163
+MD5 ed1e098d85579c75542ef0a49ee4dd5c files/digest-nvidia-glx-1.0.6111 163
+MD5 8a4687b0fc3e7cc0b36c247697d94701 files/digest-nvidia-glx-1.0.6629-r2 163
 MD5 3d8b3ecb3827e2e3a9a45ac6c3210a0a files/1.0.6111/NVIDIA_glx-1.0.6111-defines.patch 437
 MD5 32901fb95c4fdc6cfa6b762498240b3c files/1.0.6111/NVIDIA_glx-1.0.6111-glheader.patch 380
 MD5 6f55327ce020f7ed0d433ea99dacb315 files/1.0.6111/NVIDIA_glx-1.0.6111-makefile.patch 593
+MD5 3d8b3ecb3827e2e3a9a45ac6c3210a0a files/1.0.6629/NVIDIA_glx-1.0.6629-defines.patch 437
 MD5 32901fb95c4fdc6cfa6b762498240b3c files/1.0.6629/NVIDIA_glx-1.0.6629-glheader.patch 380
 MD5 f6f00d8e915e18f456ad615b4ebd8a21 files/1.0.6629/NVIDIA_glx-1.0.6629-makefile.patch 602
-MD5 3d8b3ecb3827e2e3a9a45ac6c3210a0a files/1.0.6629/NVIDIA_glx-1.0.6629-defines.patch 437
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.0 (GNU/Linux)
+
+iD4DBQFB7LxxArHZZzCEUG0RAr40AJoCk3OQAcK/6x7oLyR6mPhBVQM0lgCUCNX4
+tlulzp0SHDkpop6FUrjZwA==
+=JNH3
+-----END PGP SIGNATURE-----
